working on homepage

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </ul>
       </div>
     </nav> <!-- close nav section -->
+    <!-- not-jumbotron div -->
+    <div class="jumbo"></div> <!-- close not-jumbotron div -->
     <!-- open primary container -->
     <div class="container">
 
