--- a/index.html
+++ b/index.html
@@ -27,7 +27,35 @@
     <div class="jumbo"></div> <!-- close not-jumbotron div -->
     <!-- open primary container -->
     <div class="container">
+      <div class="row">
+       <div class="col s12 m12">
+         <div class="card">
+           <div class="card-content">
+             <span class="card-title">Welcome to Audio Tools</span>
+             <p>Audio Tools is an online interactive tutorial for common audio production tools. Entirely on the web with no software needed, this is the perfect place for beginners to learn and interact with common audio tools.</p>
+           </div>
+         </div>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col s12 m6">
+         <div class="card">
+            <div class="card-image">
+              <img src="images/sample-1.jpg">
+              <span class="card-title">Equlization</span>
+            </div>
+            <div class="card-content">
+              <p>Equlization, or EQ, is one of the most commonly used audio processing tools. EQ units range from very simple high and low shelves to large 31 band graphic units. This tutorial slowly builds complexity while teaching you the basics of EQ.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">Learn about EQ</a>
+            </div>
+          </div>
+       </div>
+       <div class="col s12 m6">
 
+       </div>
+     </div>
     </div> <!-- close primary container -->
   </body>
 </html>
