--- a/tutorials.html
+++ b/tutorials.html
@@ -14,7 +14,7 @@
   <body>
     <!-- nav section -->
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper container">
         <a href="index.html" class="brand-logo">Audio Tools</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="index.html">Home</a></li>
