--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="./assets/javascript/main.js" charset="utf-8"></script>
+    <!-- unique script -->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        tutorialCards();
+      });
+    </script>
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -37,22 +43,8 @@
          </div>
        </div>
      </div>
-     <div class="row">
-       <div class="col s12 m6">
-         <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Equlization</span>
-            </div>
-            <div class="card-content">
-              <p>Equlization, or EQ, is one of the most commonly used audio processing tools. EQ units range from very simple high and low shelves to large 31 band graphic units. This tutorial slowly builds complexity while teaching you the basics of EQ.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Learn about EQ</a>
-            </div>
-          </div>
-       </div>
-       <div class="col s12 m6">
+     <div class="row intro">
+       <div id="tutorial-cards-col" class="col s12 m12">
 
        </div>
      </div>
