--- a/gain.html
+++ b/gain.html
@@ -7,12 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script src="./assets/javascript/main.js" charset="utf-8"></script>
-    <!-- unique script -->
-    <script type="text/javascript">
-      $(document).ready(function() {
-        tutorialCards();
-      });
-    </script>
+    <script src="./assets/javascript/gain.js" charset="utf-8"></script>
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -24,30 +19,23 @@
         <a href="index.html" class="brand-logo">Audio Tools</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="index.html">Home</a></li>
-          <!-- <li><a href="tutorials.html">Tutorials</a></li> -->
+          <li><a href="tutorials.html">Tutorials</a></li>
           <li><a href="more.html">More Info</a></li>
         </ul>
       </div>
     </nav> <!-- close nav section -->
-    <!-- not-jumbotron div -->
-    <div class="jumbo"></div> <!-- close not-jumbotron div -->
     <!-- open primary container -->
     <div class="container">
       <div class="row">
-       <div class="col s12 m12">
-         <div class="card">
-           <div class="card-content">
-             <span class="card-title">Welcome to Audio Tools</span>
-             <p>Audio Tools is an online interactive tutorial for common audio production tools. Entirely on the web with no software needed, this is the perfect place for beginners to learn and interact with common audio tools.</p>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="row intro">
-       <div id="tutorial-cards-col" class="col s12 m12">
-
-       </div>
-     </div>
+        <div class="col s12 m12">
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">What is Gain?</span>
+              <p>Gain is often a difficult to define term. Technically speaking, gain refers to the amplification or attenuation of an audio single by one process or another. A preamp adds gain to a microphone signal so it's audible. An amplifier adds gain to a line level output from a mixer to power a loudspeaker.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div> <!-- close primary container -->
   </body>
 </html>
